Doing some flexbox work

--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    
     <div class="header">
+      <div class="left">
       <div class="logo">
         LOGO
       </div>
-      <ul class="links">
+      <ul class="links nav">
         <li><a href="google.com">link-one</a></li>
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
       </ul>
+    </div>
+    <div class="profile">
       <button class="notifications">
         1 new notification
       </button>
